Modified product descripion

--- a/join.html
+++ b/join.html
@@ -16,7 +16,7 @@
             <div class="nav-content">
                 <div class="nav-logo">
                     <a href="index.html">
-                        <img src="assets/logo.svg">
+                        <img src="assets/logo-white.svg">
                     </a>
                 </div>
                 <!-- <div class="hamburger">
@@ -37,29 +37,29 @@
                                 <div class="button-img">
                                     <img src="assets/download-white.svg">
                                 </div>
-                                <h4>Download<span class="main-button-img-wrapper"></span></h4>
+                                <h4>Try it out for <b>FREE</b><span class="main-button-img-wrapper"></span></h4>
                             </a>
                         </div>
                     </div>
                 </li>
             </ul>
         </nav>
-        <section class="section-dark" id="section-download-wrapper">
+        <section class="section-dark" id="section-download-wrapper" style="height: 100vh">
             <div class="section-wrapper" id="section-download">
                 <h1>Hey! You're here early!</h1>
-                <h3>We are currently still working on the first version of the software, but don’t worry! Subscribe to our <b>newsletter</b> to be the first notified when we are launching!</h3>
+                <h3 style="text-align: center;">Join our beta testing program to get early access to our latest features for <b>FREE</b> and help us innovate a life changing service for all content creators out there.</h3>
                 <div id="section-download-sub">
                     <form action="/action_page.php">
                         <input type="text" id="fname" name="fname" placeholder="Email Address"><br><br>
                     </form>
                     <button class="main-button" id="section-download-button">
                         <a href="mailto:contact@liveguard.ca">
-                            <h4>Subscribe</h4>
+                            <h4>Join</h4>
                         </a>
                     </button>
                 </div>
                 <div id="section-download-outro">
-                    <h4><i>Follow us on our social media to not miss any updates!</i></h4>
+                    <h4><i>Follow us on social media to not miss any updates!</i></h4>
                     <ul id="test-links" class="download-links">
                         <li><a href="mailto:contact@liveguard.ca"><img src="assets/gmail.svg"></a></li>
                         <li><a href="https://www.linkedin.com/company/liveguard/" target="_blank"><img src="assets/linkedin.svg"></a></li>
