--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="nav-content">
                 <div class="nav-logo">
                     <a href="index.html">
-                        <img src="assets/logo.svg">
+                        <img src="assets/logo-white.svg">
                     </a>
                 </div>
                 <!-- <div class="hamburger">
@@ -33,11 +33,11 @@
                 <li>
                     <div id="contact-button-wrapper">
                         <div class="main-button" id="contact-button">
-                            <a href="download.html">
+                            <a href="join.html">
                                 <div class="button-img">
                                     <img src="assets/download-white.svg">
                                 </div>
-                                <h4>Download<span class="main-button-img-wrapper"></span></h4>
+                                <h4>Try it out for <b>FREE</b><span class="main-button-img-wrapper"></span></h4>
                             </a>
                         </div>
                     </div>
@@ -48,18 +48,24 @@
             <div class="section-wrapper" id="section-top">
                 <div id="section-top-content">
                     <h1>REAL-TIME EDITING, REAL-TIME RESULTS.</h1>
-                    <h3>Protect your content by using Machine Learning to detect threats and avoid sanctions and demonetizations for content creators on <i>Twitch</i>, <i>Youtube</i>, <i>Instagram</i> and <i>TikTok</i>.</h3>
+                    <h3>The easiest way of using AI to put the fun back into content creation while protecting your work from sanctions and demonetizations on <i>Twitch</i>, <i>Youtube</i>, <i>Instragram</i>, and more.</h3>
                     <div class="main-button" id="section-top-button">
-                        <a href="download.html">
+                        <a href="join.html">
                             <div class="button-img">
                                 <img src="assets/download-white.svg">
                             </div>
-                            <h4>Download<span class="main-button-img-wrapper"></span></h4>
+                            <h4>Try it out for <b>FREE</b><span class="main-button-img-wrapper"></span></h4>
                         </a>
                     </div>
                 </div>
                 <div id="section-top-img">
-                    <img src="assets/svg/computer-live.svg">
+                    <div class="section-top-img-decoration" style="top: 20%; left: 5%">
+                        <img style="width: 80px; height: 80px; rotate: 40deg;" src="assets/blue-star.svg">
+                    </div>
+                    <div class="section-top-img-decoration" style="bottom: 10%; right: 5%">
+                        <img style="width: 80px; height: 80px; rotate: 70deg;" src="assets/blue-cross.svg">
+                    </div>
+                    <img src="assets/computer-live.svg">
                 </div>
             </div>
         </section>
@@ -68,24 +74,24 @@
                 <h1>EFFORTLESS HIGH QUALITY.</h1>
                 <div id="section-desc-content-wrapper">
                     <div id="section-desc-content">
-                        <h2>Automated Protection</h2>
-                        <h3>Remove undesired and unpredictable audio  from livestreams. Become free from <i>any concerns</i> about penalties on streaming platforms with <i>zero effort!</i></h3>
+                        <h2>Real-time protection</h2>
+                        <h3>Customize our AI models to enhance your stream's audio and video by filtering out unwanted content in real-time. Take back control of your livestream and avoid platform penalties.</h3>
                     </div>
                     <div id="section-desc-content">
-                        <h2>Customizable edits</h2>
-                        <h3>Preserve your creativity and decide the type of content you are guarding yourself from. Personalize your dashboard with your favorite streaming platforms.</h3>
+                        <h2>Unlimited possibilities</h2>
+                        <h3>Introduce unlimited profile configurations to your streams on the cloud with multistream, layout designs, statistics analysis, and more. Let your creativity run wild!</h3>
                     </div>
                     <div id="section-desc-content">
                         <h2>Seemless integration</h2>
-                        <h3>LiveGuard works with your existing tools to enhance your streaming experience instead of replacing it for an easy adaptation. Use <i>plugins</i> to communicate with your desired platforms.</h3>
+                        <h3>Seemlessly integrates with your favorite streaming tools and platforms. Never compromise on your current workflow, without exceptions.</h3>
                     </div>
                 </div>
                 <div class="main-button" id="section-desc-button">
-                    <a href="download.html">
+                    <a href="join.html">
                         <div class="button-img">
                             <img src="assets/download-white.svg">
                         </div>
-                        <h4>Download<span class="main-button-img-wrapper"></span></h4>
+                        <h4>Try it out for <b>FREE</b><span class="main-button-img-wrapper"></span></h4>
                     </a>
                 </div>
             </div>
@@ -96,14 +102,14 @@
                     <img src="assets/logo.svg">
                 </div>
                 <div id="section-ml-content">
-                    <h1>LIVEGUARD..</h1>
-                    <h3>…uses <b>Machine Learning</b> to understand the context of the live stream, then edit its video and audio. <br><br>It censors or replaces recognized <i>copyrighted content</i> and <i>platform specific terms of service violations.</i></h3>
+                    <h1>CREATOR FIRST</h1>
+                    <h3>Regardless of the streaming platform, we believe that you should not have to worry about unpredictable and unfair copyrighted content and ToS violations when livestreaming. Push your best content out there, and let us worry about the details. <br><br>We use AI to understand the context within your livestream to generate desired content and edits for your stream's video and audio.</h3>
                     <div class="main-button" id="section-top-button">
-                        <a href="download.html">
+                        <a href="join.html">
                             <div class="button-img">
                                 <img src="assets/download-white.svg">
                             </div>
-                            <h4>Download<span class="main-button-img-wrapper"></span></h4>
+                            <h4>Try it out for <b>FREE</b><span class="main-button-img-wrapper"></span></h4>
                         </a>
                     </div>
                 </div>
@@ -114,7 +120,7 @@
                 <div id="section-test-content">
                     <h1>INTERESTED IN BETA TESTING?</h1>
                     <div>
-                        <h3>We are always looking for streamers and content creators to test out our platform and new functionalities!</h3>
+                        <h3>We are always looking for content creators to help us build our platform and bring new ideas to the table!</h3>
                         <ul id="test-links">
                             <li><a href="mailto:contact@liveguard.ca"><img src="assets/gmail.svg"></a></li>
                             <li><a href="https://www.linkedin.com/company/liveguard/" target="_blank"><img src="assets/linkedin.svg"></a></li>
