Added google analytics

--- a/join.html
+++ b/join.html
@@ -10,6 +10,16 @@
         <link rel="stylesheet" href="m-style-download.css">
         <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;900&display=swap" rel="stylesheet">
         <link rel="icon" type="image/x-icon" href="assets/logo.svg">
+
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-0E8SMDYMNX"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-0E8SMDYMNX');
+        </script>
     </head>
     <body>
         <nav>
@@ -26,7 +36,7 @@
                     <input type="checkbox" class="hamburger-check"/>
                 </div>       -->
             </div>
-            <ul class="nav-links">
+            <ul id="nav-links">
                 <li><a href="mailto:contact@liveguard.ca"><img src="assets/gmail.svg"></a></li>
                 <li><a href="https://www.linkedin.com/company/liveguard/" target="_blank"><img src="assets/linkedin.svg"></a></li>
                 <li><a href="https://www.instagram.com/liveguard.ca/" target="_blank"><img src="assets/instagram.svg"></a></li>
