Removed download icon

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
                     <div id="contact-button-wrapper">
                         <div class="main-button" id="contact-button">
                             <a href="join.html">
-                                <div class="button-img">
+                                <!-- <div class="button-img">
                                     <img src="assets/download-white.svg">
-                                </div>
+                                </div> -->
                                 <h4>Try it out for <b>FREE</b><span class="main-button-img-wrapper"></span></h4>
                             </a>
                         </div>
@@ -61,9 +61,9 @@
                     <h3>The easiest way of using AI to put the fun back into content creation while protecting your work from sanctions and demonetizations on <i>Twitch</i>, <i>Youtube</i>, <i>Instragram</i>, and more.</h3>
                     <div class="main-button" id="section-top-button">
                         <a href="join.html">
-                            <div class="button-img">
+                            <!-- <div class="button-img">
                                 <img src="assets/download-white.svg">
-                            </div>
+                            </div> -->
                             <h4>Try it out for <b>FREE</b><span class="main-button-img-wrapper"></span></h4>
                         </a>
                     </div>
@@ -98,9 +98,9 @@
                 </div>
                 <div class="main-button" id="section-desc-button">
                     <a href="join.html">
-                        <div class="button-img">
+                        <!-- <div class="button-img">
                             <img src="assets/download-white.svg">
-                        </div>
+                        </div> -->
                         <h4>Try it out for <b>FREE</b><span class="main-button-img-wrapper"></span></h4>
                     </a>
                 </div>
@@ -116,9 +116,9 @@
                     <h3>Regardless of the streaming platform, we believe that you should not have to worry about unpredictable and unfair copyrighted content and ToS violations when livestreaming. Push your best content out there, and let us worry about the details. <br><br>We use AI to understand the context within your livestream to generate desired content and edits for your stream's video and audio.</h3>
                     <div class="main-button" id="section-top-button">
                         <a href="join.html">
-                            <div class="button-img">
+                            <!-- <div class="button-img">
                                 <img src="assets/download-white.svg">
-                            </div>
+                            </div> -->
                             <h4>Try it out for <b>FREE</b><span class="main-button-img-wrapper"></span></h4>
                         </a>
                     </div>
