--- a/join.html
+++ b/join.html
@@ -46,9 +46,9 @@
                     <div id="contact-button-wrapper">
                         <div class="main-button" id="contact-button">
                             <a href="download.html">
-                                <div class="button-img">
+                                <!-- <div class="button-img">
                                     <img src="assets/download-white.svg">
-                                </div>
+                                </div> -->
                                 <h4>Try it out for <b>FREE</b><span class="main-button-img-wrapper"></span></h4>
                             </a>
                         </div>
