Changed subscribe form service

--- a/join.html
+++ b/join.html
@@ -61,7 +61,7 @@
                 <h1>Hey! You're here early!</h1>
                 <h3 style="text-align: center;">Join our beta testing program to get early access to our latest features for <b>FREE</b> and help us innovate a life changing service for all content creators out there.</h3>
                 <div id="section-download-sub">
-                    <form action="https://api.web3forms.com/submit" method="POST">
+                    <!-- <form action="https://api.web3forms.com/submit" method="POST">
                         <input type="hidden" name="access_key" value="67aa859d-39aa-44af-80b9-76b26cacc4d1">
                         <input type="email" id="email" name="email" placeholder="Email Address" required>
                         <input type="text" id="username" name="username" placeholder="Username" required>
@@ -88,7 +88,8 @@
                         <button class="main-button" id="section-download-button" type="submit">
                             <h4>Join</h4>
                         </button>
-                    </form>
+                    </form> -->
+                    <script async src="https://eocampaign1.com/form/88ca21ac-2127-11ef-b9c1-9908c9f76849.js" data-form="88ca21ac-2127-11ef-b9c1-9908c9f76849"></script>
                 </div>
                 <div id="section-download-outro">
                     <h4><i>Follow us on social media to not miss any updates!</i></h4>
