--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8">
         <title>LiveGuard - Real-Time Editing, Real-Time Results</title>
         <link rel="stylesheet" href="style-main.css">
         <link rel="stylesheet" href="style-nav.css">
@@ -20,6 +20,14 @@
 
         gtag('config', 'G-0E8SMDYMNX');
         </script>
+
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+
+        <script src="https://cdn.jsdelivr.net/npm/i18next@21.6.10/i18next.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/jquery-i18next@1.2.1/jquery-i18next.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/i18next-browser-languagedetector@6.1.3/i18nextBrowserLanguageDetector.min.js"></script>
+        <script src="i18n.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/i18next-http-backend@1.3.2/i18nextHttpBackend.min.js"></script>
     </head>
     <body>
         <nav>
@@ -29,6 +37,7 @@
                         <img src="assets/logo-white.svg">
                     </a>
                 </div>
+                <select name="language" id="languageSwitcher"></select>
                 <!-- <div class="hamburger">
                     <span></span>
                     <span></span>
@@ -47,7 +56,7 @@
                                 <!-- <div class="button-img">
                                     <img src="assets/download-white.svg">
                                 </div> -->
-                                <h4>Try it out for <b>FREE</b><span class="main-button-img-wrapper"></span></h4>
+                                <h4 data-i18n="tryButton"><span class="main-button-img-wrapper"></span></h4>
                             </a>
                         </div>
                     </div>
@@ -57,14 +66,14 @@
         <section class="section-light" id="section-top-wrapper">
             <div class="section-wrapper" id="section-top">
                 <div id="section-top-content">
-                    <h1>REAL-TIME EDITING, REAL-TIME RESULTS.</h1>
-                    <h3>The easiest way of using AI to put the fun back into content creation while protecting your work from sanctions and demonetizations on <i>Twitch</i>, <i>Youtube</i>, <i>Instragram</i>, and more.</h3>
+                    <h1 data-i18n="topContent.title"></h1>
+                    <h3 data-i18n="topContent.paragraph"></h3>
                     <div class="main-button" id="section-top-button">
                         <a href="join.html">
                             <!-- <div class="button-img">
                                 <img src="assets/download-white.svg">
                             </div> -->
-                            <h4>Try it out for <b>FREE</b><span class="main-button-img-wrapper"></span></h4>
+                            <h4 data-i18n="tryButton"><span class="main-button-img-wrapper"></span></h4>
                         </a>
                     </div>
                 </div>
@@ -81,19 +90,19 @@
         </section>
         <section class="section-dark" id="section-desc-wrapper">
             <div class="section-wrapper" id="section-desc">
-                <h1>EFFORTLESS HIGH QUALITY.</h1>
+                <h1 data-i18n="sectionDesc.title"></h1>
                 <div id="section-desc-content-wrapper">
                     <div id="section-desc-content">
-                        <h2>Real-time protection</h2>
-                        <h3>Customize our AI models to enhance your stream's audio and video by filtering out unwanted content in real-time. Take back control of your livestream and avoid platform penalties.</h3>
+                        <h2 data-i18n="sectionDesc.protection.title"></h2>
+                        <h3 data-i18n="sectionDesc.protection.paragraph"></h3>
                     </div>
                     <div id="section-desc-content">
-                        <h2>Unlimited possibilities</h2>
-                        <h3>Introduce unlimited profile configurations to your streams on the cloud with multistream, layout designs, statistics analysis, and more. Let your creativity run wild!</h3>
+                        <h2 data-i18n="sectionDesc.possibilities.title"></h2>
+                        <h3 data-i18n="sectionDesc.possibilities.paragraph"></h3>
                     </div>
                     <div id="section-desc-content">
-                        <h2>Seemless integration</h2>
-                        <h3>Seemlessly integrates with your favorite streaming tools and platforms. Never compromise on your current workflow, without exceptions.</h3>
+                        <h2 data-i18n="sectionDesc.integration.title"></h2>
+                        <h3 data-i18n="sectionDesc.integration.paragraph"></h3>
                     </div>
                 </div>
                 <div class="main-button" id="section-desc-button">
@@ -101,7 +110,7 @@
                         <!-- <div class="button-img">
                             <img src="assets/download-white.svg">
                         </div> -->
-                        <h4>Try it out for <b>FREE</b><span class="main-button-img-wrapper"></span></h4>
+                        <h4 data-i18n="tryButton"><span class="main-button-img-wrapper"></span></h4>
                     </a>
                 </div>
             </div>
@@ -112,14 +121,15 @@
                     <img src="assets/logo.svg">
                 </div>
                 <div id="section-ml-content">
-                    <h1>CREATOR FIRST</h1>
-                    <h3>Regardless of the streaming platform, we believe that you should not have to worry about unpredictable and unfair copyrighted content and ToS violations when livestreaming. Push your best content out there, and let us worry about the details. <br><br>We use AI to understand the context within your livestream to generate desired content and edits for your stream's video and audio.</h3>
+                    <h1 data-i18n="sectionML.title"></h1>
+                    <h3 data-i18n="sectionML.paragraph1"></h3>
+                    <h3 data-i18n="sectionML.paragraph2"></h3>
                     <div class="main-button" id="section-top-button">
                         <a href="join.html">
                             <!-- <div class="button-img">
                                 <img src="assets/download-white.svg">
                             </div> -->
-                            <h4>Try it out for <b>FREE</b><span class="main-button-img-wrapper"></span></h4>
+                            <h4 data-i18n="tryButton"><span class="main-button-img-wrapper"></span></h4>
                         </a>
                     </div>
                 </div>
@@ -128,9 +138,9 @@
         <section class="section-dark" id="section-test-wrapper">
             <div class="section-wrapper" id="section-test">
                 <div id="section-test-content">
-                    <h1>INTERESTED IN BETA TESTING?</h1>
+                    <h1 data-i18n="sectionBeta.title"></h1>
                     <div>
-                        <h3>We are always looking for content creators to help us build our platform and bring new ideas to the table!</h3>
+                        <h3 data-i18n="sectionBeta.paragraph"></h3>
                         <ul id="test-links">
                             <li><a href="mailto:contact@liveguard.ca"><img src="assets/gmail.svg"></a></li>
                             <li><a href="https://www.linkedin.com/company/liveguard/" target="_blank"><img src="assets/linkedin.svg"></a></li>
@@ -138,7 +148,7 @@
                         </ul>
                         <button class="main-button" id="section-test-button">
                             <a href="mailto:contact@liveguard.ca">
-                                <h4>Contact Us</h4>
+                                <h4 data-i18n="contactButton">Contact Us</h4>
                             </a>
                         </button>
                     </div>
