Made the language selector look a bit nicer

--- a/join.html
+++ b/join.html
@@ -37,7 +37,6 @@
                         <img src="assets/logo-white.svg">
                     </a>
                 </div>
-                <select name="language" id="languageSwitcher"></select>
                 <!-- <div class="hamburger">
                     <span></span>
                     <span></span>
@@ -46,13 +45,14 @@
                 </div>       -->
             </div>
             <ul id="nav-links">
+                <li><select name="language" id="languageSwitcher"></select></li>
                 <li><a href="mailto:contact@liveguard.ca"><img src="assets/gmail.svg"></a></li>
                 <li><a href="https://www.linkedin.com/company/liveguard/" target="_blank"><img src="assets/linkedin.svg"></a></li>
                 <li><a href="https://www.instagram.com/liveguard.ca/" target="_blank"><img src="assets/instagram.svg"></a></li>
                 <li>
                     <div id="contact-button-wrapper">
                         <div class="main-button" id="contact-button">
-                            <a href="download.html">
+                            <a href="join.html">
                                 <!-- <div class="button-img">
                                     <img src="assets/download-white.svg">
                                 </div> -->
