--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
                         <img src="assets/logo-white.svg">
                     </a>
                 </div>
-                <select name="language" id="languageSwitcher"></select>
                 <!-- <div class="hamburger">
                     <span></span>
                     <span></span>
@@ -46,6 +45,7 @@
                 </div>       -->
             </div>
             <ul id="nav-links">
+                <li><select name="language" id="languageSwitcher"></select></li>
                 <li><a href="mailto:contact@liveguard.ca"><img src="assets/gmail.svg"></a></li>
                 <li><a href="https://www.linkedin.com/company/liveguard/" target="_blank"><img src="assets/linkedin.svg"></a></li>
                 <li><a href="https://www.instagram.com/liveguard.ca/" target="_blank"><img src="assets/instagram.svg"></a></li>
