fixed typos and link error

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div class="section-wrapper" id="section-top">
                 <div id="section-top-content">
                     <h1>REAL-TIME EDITING, REAL-TIME RESULTS.</h1>
-                    <h3>The easiest way of using AI to put the fun back into content creation while protecting your work from sanctions and demonetizations on <i>Twitch</i>, <i>Youtube</i>, <i>Instragram</i>, and more.</h3>
+                    <h3>The easiest way of using AI to put the fun back into content creation while protecting your work from sanctions and demonetizations on <i>Twitch</i>, <i>Youtube</i>, <i>Instagram</i>, and more.</h3>
                     <div class="main-button" id="section-top-button">
                         <a href="join.html">
                             <!-- <div class="button-img">
@@ -92,8 +92,8 @@
                         <h3>Introduce unlimited profile configurations to your streams on the cloud with multistream, layout designs, statistics analysis, and more. Let your creativity run wild!</h3>
                     </div>
                     <div id="section-desc-content">
-                        <h2>Seemless integration</h2>
-                        <h3>Seemlessly integrates with your favorite streaming tools and platforms. Never compromise on your current workflow, without exceptions.</h3>
+                        <h2>Seamless integration</h2>
+                        <h3>Seamlessly integrates with your favorite streaming tools and platforms. Never compromise on your current workflow, without exceptions.</h3>
                     </div>
                 </div>
                 <div class="main-button" id="section-desc-button">
