--- a/join.html
+++ b/join.html
@@ -45,7 +45,7 @@
                 <li>
                     <div id="contact-button-wrapper">
                         <div class="main-button" id="contact-button">
-                            <a href="download.html">
+                            <a href="join.html">
                                 <!-- <div class="button-img">
                                     <img src="assets/download-white.svg">
                                 </div> -->
