Ajusted sizing of the language selector

--- a/index.html
+++ b/index.html
@@ -31,37 +31,31 @@
     </head>
     <body>
         <nav>
-            <div class="nav-content">
+            <div class="nav-content-left">
                 <div class="nav-logo">
                     <a href="index.html">
                         <img src="assets/logo-white.svg">
                     </a>
                 </div>
-                <!-- <div class="hamburger">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                    <input type="checkbox" class="hamburger-check"/>
-                </div>       -->
             </div>
-            <ul id="nav-links">
-                <li><select name="language" id="languageSwitcher"></select></li>
-                <li><a href="mailto:contact@liveguard.ca"><img src="assets/gmail.svg"></a></li>
-                <li><a href="https://www.linkedin.com/company/liveguard/" target="_blank"><img src="assets/linkedin.svg"></a></li>
-                <li><a href="https://www.instagram.com/liveguard.ca/" target="_blank"><img src="assets/instagram.svg"></a></li>
-                <li>
-                    <div id="contact-button-wrapper">
-                        <div class="main-button" id="contact-button">
-                            <a href="join.html">
-                                <!-- <div class="button-img">
-                                    <img src="assets/download-white.svg">
-                                </div> -->
-                                <h4 data-i18n="tryButton"><span class="main-button-img-wrapper"></span></h4>
-                            </a>
+            <div class="nav-content-right">
+                <select name="language" id="languageSwitcher"></select>
+                <ul id="nav-links">
+                    <!-- <li><select name="language" id="languageSwitcher"></select></li> -->
+                    <li><a href="mailto:contact@liveguard.ca"><img src="assets/gmail.svg"></a></li>
+                    <li><a href="https://www.linkedin.com/company/liveguard/" target="_blank"><img src="assets/linkedin.svg"></a></li>
+                    <li><a href="https://www.instagram.com/liveguard.ca/" target="_blank"><img src="assets/instagram.svg"></a></li>
+                    <li>
+                        <div id="contact-button-wrapper">
+                            <div class="main-button" id="contact-button">
+                                <a href="join.html">
+                                    <h4 data-i18n="tryButton"><span class="main-button-img-wrapper"></span></h4>
+                                </a>
+                            </div>
                         </div>
-                    </div>
-                </li>
-            </ul>
+                    </li>
+                </ul>
+            </div>
         </nav>
         <section class="section-light" id="section-top-wrapper">
             <div class="section-wrapper" id="section-top">
