--- a/index.html
+++ b/index.html
@@ -2,6 +2,18 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8">
+        <meta name="title" content="LiveGuard">
+        <meta name="description" content="The easiest way of using AI to put the fun back into content creation while protecting your work from sanctions and demonetizations on any platform">
+        <meta name="keywords" content="livestream, live, content, creator, ban, demonetization, AI, editing, editor, tool, platform, video, youtube, twitch, kick, tiktok, obs">
+        <meta name="robots" content="index, follow">
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+        <meta name="language" content="English">
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="https://www.liveguard.ca/" />
+        <meta property="og:title" content="LiveGuard - Join" />
+        <meta property="og:description" content="The easiest way of using AI to put the fun back into content creation while protecting your work from sanctions and demonetizations on any platform" />
+        <meta property="og:image" content="https://www.liveguard.ca/assets/thumbnail.png" />
+        
         <title>LiveGuard - Real-Time Editing, Real-Time Results</title>
         <link rel="stylesheet" href="style-main.css">
         <link rel="stylesheet" href="style-nav.css">
