Text and buttons modified
Updated text, removed extra buttons from content and navbar
- need to update french text
- need to correct alignment of navbar
- need to correct join.html for dynamic sizing

--- a/index.html
+++ b/index.html
@@ -54,14 +54,11 @@
                 <select name="language" id="languageSwitcher"></select>
                 <ul id="nav-links">
                     <!-- <li><select name="language" id="languageSwitcher"></select></li> -->
-                    <li><a href="mailto:contact@liveguard.ca"><img src="assets/gmail.svg"></a></li>
-                    <li><a href="https://www.linkedin.com/company/liveguard/" target="_blank"><img src="assets/linkedin.svg"></a></li>
-                    <li><a href="https://www.instagram.com/liveguard.ca/" target="_blank"><img src="assets/instagram.svg"></a></li>
                     <li>
                         <div id="contact-button-wrapper">
                             <div class="main-button" id="contact-button">
                                 <a href="join.html">
-                                    <h4 data-i18n="tryButton"><span class="main-button-img-wrapper"></span></h4>
+                                    <h4><span class="main-button-img-wrapper"> Become a Beta Tester! </span></h4>
                                 </a>
                             </div>
                         </div>
@@ -111,14 +108,6 @@
                         <h3 data-i18n="sectionDesc.integration.paragraph"></h3>
                 </div>
             </div>
-            <div class="main-button" id="section-desc-button">
-                <a href="join.html">
-                    <!-- <div class="button-img">
-                        <img src="assets/download-white.svg">
-                    </div> -->
-                    <h4 data-i18n="tryButton"><span class="main-button-img-wrapper"></span></h4>
-                </a>
-            </div>
         </section>
         <section class="section-light" id="section-ml-wrapper">
             <div class="section-wrapper" id="section-ml">
@@ -129,14 +118,6 @@
                     <h1 data-i18n="sectionML.title"></h1>
                     <h3 data-i18n="sectionML.paragraph1"></h3>
                     <h3 data-i18n="sectionML.paragraph2"></h3>
-                    <div class="main-button" id="section-top-button">
-                        <a href="join.html">
-                            <!-- <div class="button-img">
-                                <img src="assets/download-white.svg">
-                            </div> -->
-                            <h4 data-i18n="tryButton"><span class="main-button-img-wrapper"></span></h4>
-                        </a>
-                    </div>
                 </div>
             </div>
         </section>
@@ -146,11 +127,6 @@
                     <h1 data-i18n="sectionBeta.title"></h1>
                     <div>
                         <h3 data-i18n="sectionBeta.paragraph"></h3>
-                        <ul id="test-links">
-                            <li><a href="mailto:contact@liveguard.ca"><img src="assets/gmail.svg"></a></li>
-                            <li><a href="https://www.linkedin.com/company/liveguard/" target="_blank"><img src="assets/linkedin.svg"></a></li>
-                            <li><a href="https://www.instagram.com/liveguard.ca/" target="_blank"><img src="assets/instagram.svg"></a></li>
-                        </ul>
                         <button class="main-button" id="section-test-button">
                             <a href="mailto:contact@liveguard.ca">
                                 <h4 data-i18n="contactButton">Contact Us</h4>
