--- a/join.html
+++ b/join.html
@@ -69,7 +69,7 @@
                 </ul>
             </div>
         </nav>
-        <section class="section-dark" id="section-download-wrapper" style="height: 100vh">
+        <section class="section-dark" id="section-download-wrapper" style="height: 100vh; padding-top: 8vh;">
             <div class="section-wrapper" id="section-download">
                 <h1 data-i18n="betaPage.title"></h1>
                 <h3 style="text-align: center;" data-i18n="betaPage.paragraph"></h3>
