Added hot it works page

--- a/join.html
+++ b/join.html
@@ -65,9 +65,9 @@
                 <li class="nav-dropdown">
                     <button data-i18n="nav.featuresBtn" class="nav-toggle">Features ▾</button>
                     <ul class="nav-menu">
-                        <li><a data-i18n="nav.featuresMenu.aiOption" href="#">How it works</a></li>
-                        <li><a data-i18n="nav.featuresMenu.customizeOption" href="#">Customizability</a></li>
-                        <li><a data-i18n="nav.featuresMenu.missionOption" href="#">Made for you</a></li>
+                        <li><a data-i18n="nav.featuresMenu.aiOption" href="how-it-works">How it works</a></li>
+                        <li><a data-i18n="nav.featuresMenu.customizeOption" href="customize">Customizability</a></li>
+                        <li><a data-i18n="nav.featuresMenu.missionOption" href="mission">Made for you</a></li>
                     </ul>
                 </li>
                 <li><a data-i18n="nav.aboutBtn" href="#">About</a></li>
