Added FR language to how-it-works page

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <ul class="nav-menu">
                     <li><a data-i18n="nav.featuresMenu.aiOption" href="how-it-works">How it works</a></li>
                     <li><a data-i18n="nav.featuresMenu.customizeOption" href="customize">Customizability</a></li>
-                    <li><a data-i18n="nav.featuresMenu.missionOption" href="mission">Made for you</a></li>
+                    <!-- <li><a data-i18n="nav.featuresMenu.missionOption" href="mission">Made for you</a></li> -->
                 </ul>
             </li>
             <li><a data-i18n="nav.aboutBtn" href="about">About</a></li>
