--- a/join.html
+++ b/join.html
@@ -67,7 +67,7 @@
                     <ul class="nav-menu">
                         <li><a data-i18n="nav.featuresMenu.aiOption" href="how-it-works">How it works</a></li>
                         <li><a data-i18n="nav.featuresMenu.customizeOption" href="customize">Customizability</a></li>
-                        <li><a data-i18n="nav.featuresMenu.missionOption" href="mission">Made for you</a></li>
+                        <!-- <li><a data-i18n="nav.featuresMenu.missionOption" href="mission">Made for you</a></li> -->
                     </ul>
                 </li>
                 <li><a data-i18n="nav.aboutBtn" href="#">About</a></li>
@@ -92,7 +92,7 @@
             <h1 data-i18n="joinPage.formSection.title">We are not quite ready yet</h1>
             <h3 style="text-align: center;" data-i18n="joinPage.formSection.description">Paragraph here</h3>
                 <div id="waitlist-form">
-                    <script async src="https://eocampaign1.com/form/88ca21ac-2127-11ef-b9c1-9908c9f76849.js" data-form="88ca21ac-2127-11ef-b9c1-9908c9f76849"></script>
+                    <script async src="https://eocampaign1.com/form/7ad91524-416c-11f0-9569-d1b4e0d5695a.js" data-form="7ad91524-416c-11f0-9569-d1b4e0d5695a"></script>
                 </div>
                 <div class="contact-details">
                     <h4 data-i18n="joinPage.formSection.followUs">Follow us on social media</h4>
