Modified hands holding star graphics

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             <p data-i18n="featuresSection.feature3.description">Seamlessly integrates with your favorite streaming tools and platforms. Never compromise on your current workflow, without exceptions.</p>
         </div>
         <div class="action-button">
-            <a data-i18n="featuresSection.moreBtn" href="how-it-works" class="dark-button">See LiveGuard in action</a>
+            <a data-i18n="featuresSection.moreBtn" href="how-it-works" class="dark-button">See it in action</a>
         </div>
     </section>
 
