Added orbit animation to main page

--- a/index.html
+++ b/index.html
@@ -129,7 +129,25 @@
 
     <!-- Creator First Section -->
     <section class="creator">
-        <img src="assets/hands-holding-star.svg" alt="Hands holding star">
+        <div class="orbit-container">
+            <img src="assets/hands-holding-star.svg" alt="Hands holding star" class="orbit-center-image">
+            <div class="orbit-wrapper youtube">
+                <div class="orbit-icon">
+                    <img src="assets/youtube-icon.png" alt="YouTube" class="orbit-satellite-image">
+                </div>
+            </div>
+            <div class="orbit-wrapper twitch">
+                <div class="orbit-icon">
+                    <img src="assets/twitch-icon.png" alt="Twitch" class="orbit-satellite-image">
+                </div>
+            </div>
+            <div class="orbit-wrapper kick">
+                <div class="orbit-icon">
+                    <img src="assets/kick-icon.png" alt="Kick" class="orbit-satellite-image">
+                </div>
+            </div>
+        </div>
+        <!-- <img src="assets/hands-holding-star.svg" alt="Hands holding star"> -->
         <h2 data-i18n="creatorSection.title">CREATOR FIRST</h2>
         <p data-i18n="creatorSection.description1">Regardless of the streaming platform, we believe that you should not have to worry about unpredictable and unfair copyrighted content and ToS violations when livestreaming. Push your best content out there, and let us worry about the details.</p>
         <p data-i18n="creatorSection.description2">We use AI to understand the context within your livestream to generate desired content and edits for your stream's video and audio.</p>
