Added logo in the hero title of the main page

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery-i18next@1.2.1/jquery-i18next.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/i18next-browser-languagedetector@6.1.3/i18nextBrowserLanguageDetector.min.js"></script>
     <script src="i18n.js"></script>
+    <script src="main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/i18next-http-backend@1.3.2/i18nextHttpBackend.min.js"></script>
 </head>
 <body>
@@ -89,8 +90,7 @@
     <section class="hero">
     <div class="hero-content">
         <div class="hero-text">
-            <!-- <h1>REAL-TIME EDITING, REAL-TIME RESULTS.</h1> -->
-            <h1 data-i18n="sectionHero.title">WE MODERATE YOUR LIVESTREAM SO YOU DON'T HAVE TO</h1>
+            <h1><img src="assets/lvgd_black_logo.svg" class="black-logo"><span data-i18n="sectionHero.title">MODERATES YOUR LIVESTREAM SO YOU DON'T HAVE TO</span></h1>
             <p data-i18n="sectionHero.description">
                 Stay focused on your content while our AI moderates in real time, keeping your stream safe, compliant, and free from strikes, bans, and demonetization.
             </p>
