--- a/index.html
+++ b/index.html
@@ -180,9 +180,8 @@
         </div>
         <!-- <img src="assets/hands-holding-star.svg" alt="Hands holding star"> -->
         <h2 data-i18n="creatorSection.title">CREATOR FIRST</h2>
-        <p data-i18n="creatorSection.description1">Regardless of the streaming platform, we believe that you should not have to worry about unpredictable and unfair copyrighted content and ToS violations when livestreaming. Push your best content out there, and let us worry about the details.</p>
-        <p data-i18n="creatorSection.description2">We use AI to understand the context within your livestream to generate desired content and edits for your stream's video and audio.</p>
-        <p data-i18n="creatorSection.description3">We are committed to putting you at the forefront of LiveGuard's priorities</p>
+        <p data-i18n="creatorSection.description1">We believe livestreaming should be fun, creative, and truly yours. No matter the platform, you deserve the freedom to customize your stream and share your best content-without the fear of sudden copyright strikes or unfair ToS violations.</p>
+        <p data-i18n="creatorSection.description2">We are committed to putting you at the forefront of LiveGuard's priorities.</p>
         <div class="action-button">
             <a data-i18n="creatorSection.moreBtn" href="mission" class="dark-button">See how this benefits you</a>
         </div>
@@ -201,15 +200,13 @@
   <footer>
     <div class="footer-section">
       <div class="logo">LiveGuard</div>
-      <div>Montreal, Canada</div>
+      <div>Made with ❤️ in Montreal</div>
     </div>
-    <div class="footer-section">
+    <!-- <div class="footer-section">
       <h3 data-i18n="footer.aboutSection.title">About</h3>
       <a data-i18n="footer.aboutSection.link1" href="mission">Our Mission</a>
-      <!-- TODO: To add eventually when the design is completed -->
-      <!-- <a data-i18n="footer.aboutSection.link2" href="#">Team</a> -->
       <a data-i18n="footer.aboutSection.link3" href="careers">Careers</a>
-    </div>
+    </div> -->
     <div class="footer-section">
       <h3 data-i18n="footer.contactSection.title">Reach us here:</h3>
       <div class="footer-icons">
@@ -218,7 +215,7 @@
         <a href="https://www.instagram.com/liveguard.ca/" target="_blank" rel="noopener"><img src="assets/instagram.svg" alt="Instagram" width="20" /></a>
       </div>
     </div>
-    <div class="footer-section">
+    <!-- <div class="footer-section">
       <h3 data-i18n="footer.policiesSection.title">Policies</h3>
       <a data-i18n="footer.policiesSection.link1" href="privacy">Privacy</a>
       <a data-i18n="footer.policiesSection.link2" href="terms">Terms</a>
@@ -227,7 +224,7 @@
       <h3 data-i18n="footer.helpSection.title">Help</h3>
       <a data-i18n="footer.helpSection.link1" href="documentation">Documentation</a>
       <a data-i18n="footer.helpSection.link2" href="support">Support</a>
-    </div>
+    </div> -->
   </footer>
 </body>
 </html>
